# home-security

./: .dockerignore  .env example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  emailapp.py  example_env.json  pyproject.toml  start.sh
DEMOS/: minio_dev.ipynb  mock_postgres_data.ipynb  postgres_dev.ipynb
docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yml
src/home_security/: annotations.py  inference.py  model.py  settings.py  telegram.py  utils.py
src/home_security/data/: storage.py
src/home_security/data/minio/: minio.py  minio_client.py
src/home_security/data/postgresql/: database.py  models.py
tests/: conftest.py  rebuild_helper_pickles.ipynb  test_model.py
tests/helpers/: __init__.py  image.py
